--- a/Drivers-Android-App/app/src/main/AndroidManifest.xml
+++ b/Drivers-Android-App/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:name=".util.GlobalVariables"
@@ -43,7 +44,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".ui.jobsActivity.JobsActivityExtended"></activity>
         <provider
-            android:name=".util.GenericFileProvider"
+            android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
             android:exported="false"
             android:grantUriPermissions="true">
@@ -51,6 +52,7 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_paths"/>
         </provider>
+
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyDgiyBi_nvIb44Qgx1joIWrhBezkSvU52I"/>
